Added test PPDBT007 -> PPDBT010

--- a/dbconfig.properties
+++ b/dbconfig.properties
@@ -2,3 +2,5 @@ url=jdbc:mysql://localhost:3306/db_products_parts
 jdbcdriver=com.mysql.jdbc.Driver
 username=root
 password=
+urlTest=jdbc:h2:./extras/db_products_parts
+jdbcdriverTest=org.h2.Driver
