--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="extras/mysql-connector-java-5.1.36-bin.jar"/>
-	<classpathentry exported="true" kind="lib" path="extras/junit.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry exported="true" kind="lib" path="extras/h2-1.4.189.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
